<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="toolbar_hint">Search or enter address</string>
    <string name="menu_action_add_tab">Add New Tab</string>
    <string name="menu_action_close_tabs">Close All Tabs</string>
    <string name="menu_action_close_tabs_private">Close Personal Tabs</string>
    <string name="preferences_remote_debugging">Remote debugging via USB</string>
    <string name="preferences_tracking_protection_normal">Enable in Public browsing mode</string>
    <string name="preferences_tracking_protection_private">Enable in Personal browsing mode</string>
    <string name="privacy" tools:ignore="UnusedResources">Privacy</string>
    <string name="preferences_privacy_summary">Enable for Personal and Public Browsing</string>
    <string name="preferences_website_sources_summary">Select where you want to load website content from</string>
    <string name="preferences_customization_summary">App Icon, Toolbar, Clear button</string>
    <string name="open_links_in_apps">Open links in apps</string>
    <string name="general_category">General</string>
    <string name="bit_torrent_bootstraps_category">BitTorrent Bootstraps</string>
    <string name="developer_tools_category">Developer tools</string>
    <string name="tracker_category">Tracking Protection</string>
    <string name="theme_category">Theme</string>
    <string name="toolbar_category">Toolbar Options</string>
    <string name="udp_category">UDP</string>
    <string name="clear_button_category">Clear Button</string>
    <string name="settings">Settings</string>
    <string name="customization_settings">Customization</string>
    <string name="crash_report_non_fatal_message" tools:ignore="UnusedResources">Sorry. We crashed</string>
    <string name="private_browsing_title">Personal Browsing</string>
    <string name="menu_share_with">Share with…</string>
    <string name="toast_copied">Copied!</string>
    <string name="customize_add_bootstrap_save">Save</string>
    <string name="update">Update</string>
    <string name="customize_extra_bittorrent_bootstrap">Extra BitTorrent bootstraps</string>
    <string name="customize_bittorrent_bootstrap_add_custom_bootstraps">Add custom bootstraps</string>
    <string name="customize_custom_extra_bittorrent_bootstrap">Separate IPs with commas</string>
    <string name="select_extra_bt_source">Select extra BitTorrent bootstrap</string>
    <string name="change_language">Change Language</string>
    <string name="content_description_private_browsing_button" tools:ignore="UnusedResources">Enable Personal browsing</string>
    <string name="bookmark_menu_open_in_private_tab_button">Open in personal tab</string>
    <string name="rename_top_site">Rename</string>
    <string name="remove_top_site">Remove</string>
    <string name="delete_from_history">Delete from history</string>
    <string name="shortcut_max_limit_title">Shortcut limit reached</string>
    <string name="shortcut_max_limit_content">Remove a shortcut to add a new one. Touch and hold the shortcut, then select \"Remove\".</string>
    <string name="top_sites_max_limit_confirmation_button">OK, Got It</string>
    <string name="top_sites_rename_dialog_title">Name</string>
    <string name="shortcut_name_hint">Shortcut name</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="top_sites_sponsored_label">Sponsored</string>
    <string name="top_sites_title">Shortcuts</string>
    <string name="browser_menu_back">Back</string>
    <string name="browser_menu_forward">Forward</string>
    <string name="browser_menu_refresh">Refresh</string>
    <string name="browser_menu_stop">Stop</string>
    <string name="browser_menu_settings">Settings</string>
    <string name="browser_menu_desktop_site">Request desktop site</string>
    <string name="browser_menu_add_to_homescreen">Add to Home screen</string>
    <string name="browser_menu_find_in_page">Find in page</string>
    <string name="browser_menu_share">Share</string>
    <string name="browser_menu_add_to_shortcuts">Add to shortcuts</string>
    <string name="browser_menu_remove_from_shortcuts">Remove from shortcuts</string>
    <string name="browser_menu_library">Library</string>
    <string name="empty_string" translatable="false" />
    <string name="delete_browsing_data_prompt_cancel">Cancel</string>
    <string name="delete_browsing_data_prompt_allow">Delete</string>
    <string name="preferences_delete_browsing_data_snackbar">Browsing data deleted</string>
    <string name="deleting_browsing_data_in_progress">Deleting browsing data…</string>
    <string name="preferences_delete_browsing_data">Delete browsing data</string>
    <plurals name="preferences_delete_browsing_data_tabs_subtitle">
        <item quantity="one">%d tab</item>
        <item quantity="other">%d tabs</item>
    </plurals>
    <string name="preferences_delete_browsing_data_browsing_data_title">Browsing history and site data</string>
    <plurals name="preferences_delete_browsing_data_browsing_data_subtitle">
        <item quantity="one">%d address</item>
        <item quantity="other">%d addresses</item>
    </plurals>
    <string name="preferences_delete_browsing_data_cookies">Cookies</string>
    <string name="preferences_delete_browsing_data_cookies_subtitle">You’ll be logged out of most sites</string>
    <string name="preferences_delete_browsing_data_cached_files">Cached images and files</string>
    <string name="preferences_delete_browsing_data_cached_files_subtitle">Frees up storage space</string>
    <string name="preferences_delete_browsing_data_site_permissions">Site permissions</string>
    <string name="preferences_delete_browsing_data_button">Delete browsing data</string>
    <string name="preferences_delete_browsing_data_tabs_title_2">Open tabs</string>
    <string name="delete_browsing_data_prompt_message_3">Ceno will delete the selected browsing data.</string>
    <string name="content_description_close_button">Close</string>
    <string name="share_header_2">Share</string>
    <string name="share_copy_link_to_clipboard">Copy to clipboard</string>
    <string name="share_link_all_apps_subheader">All actions</string>
    <string name="share_link_recent_apps_subheader">Recently used</string>
    <string name="share_save_to_pdf">Save as PDF</string>
    <string name="button_content_readerview">Reader view</string>
    <string name="close_mode_item" tools:ignore="UnusedResources">Close notification</string>
    <string name="preference_category_search" tools:ignore="UnusedResources">Search</string>
    <string name="setting_item_selected">%s selected</string>
    <string name="set_default_search_engine">Set default search engine</string>
    <string name="preference_show_search_suggestions">Get search suggestions</string>
    <string name="preference_search_summary">Set default</string>
    <string name="preference_choose_search_engine">Choose search engine</string>
    <string name="preference_select_preferred_engine">Select your preferred engine:</string>
    <string name="preferences_add_ons">Add-ons</string>
    <string name="secure_connection">Connection is secure</string>
    <string name="insecure_connection">Connection is not secure</string>
    <string name="not_applicable">N/A</string>
    <string name="remove_search_engine_id_1" translatable="false">amazondotcom</string>
    <string name="remove_search_engine_id_2" translatable="false">ebay</string>
    <string name="default_search_engine_id" translatable="false">ddg</string>
    <string name="cacert_file_path" translatable="false">file:///android_asset/cacert.pem</string>
    <string name="cache_type" translatable="false">bep5-http</string>
    <string name="loopback_ip" translatable="false">127.0.0.1</string>
    <string name="browser_toolbar_home">Home</string>
    <string name="crash_report_sent">Crash report sent!</string>
    <string name="mozac_feature_contextmenu_open_link_in_private_tab" tools:ignore="UnusedResources">Open link in personal tab</string>
    <string name="bridge_mode_category">Bridge Announcements</string>
    <string name="shutdown_message_one">Clearing app data</string>
    <string name="shutdown_message_two">Shutting down Ceno</string>
    <string name="title_success">Success</string>
    <string name="thank_you_bridge_mode_enabled">Thank you for becoming a bridge and growing the Ceno network!</string>
    <string name="dialog_btn_positive_ok">OK</string>
    <string name="app_name" translatable="false">Ceno</string>
    <string name="preferences_make_default_browser">Make Ceno your default browser</string>
    <string name="preferences_about_ceno">Ceno Browser</string>
    <string name="preferences_about_geckoview">GeckoView</string>
    <string name="preferences_about_ouinet">Ouinet</string>
    <string name="preferences_about_ouinet_protocol">Ouinet Protocol</string>
    <string name="preferences_about_page">About</string>
    <string name="about_category">About</string>
    <string name="about_content" tools:ignore="UnusedResources">&lt;p&gt;%1$s - Share the Web!&lt;/p&gt; &lt;p&gt;Ceno is the world’s first mobile browser that side-steps current Internet censorship methods. Its peer-to-peer backbone allows people to access and share web information in and across regions where connectivity has been interrupted or compromised. &lt;/p&gt; &lt;p&gt;%1$s is a project of &lt;a href="https://equalit.ie/"&gt;eQualit.ie&lt;/a&gt;, – a not-for-profit Canadian organization that creates decentralized internet services in support of a more equal and equitable network. eQualitie\'s solutions are open source, battle proven and developed in mind of our values. Everyday, they enable freedom of association for millions of people online.&lt;/p&gt;</string>
    <string name="about_content_title">Share the Web!</string>
    <string name="about_content_para_1">Ceno is the world’s first mobile browser that side-steps current Internet censorship methods. Its peer-to-peer backbone allows people to access and share web information in and across regions where connectivity has been interrupted or compromised.</string>
    <string name="about_content_para_2">Ceno Browser is a project by eQualitie – a not-for-profit Canadian organization that creates decentralized internet services in support of a more equal and equitable network. eQualitie\'s solutions are open source, battle proven and developed in mind of our values. Everyday, they enable freedom of association for millions of people online.</string>
    <string name="ceno_mode_manual_link">https://ceno.app/user-manual/en/concepts/public-private.html</string>
    <string name="ceno_private_browsing_body">&lt;h1&gt;Personal Browsing&lt;/h1&gt; &lt;p&gt;Ceno will not share content from personal tabs with other users. You can safely visit sites that require login. A path to the Internet is needed, though.&lt;/p&gt; &lt;p class=about-info&gt;&lt;a id=learnMore&gt;Want to learn more?&lt;/p&gt;</string>
    <string name="preferences_about_ceno_browser_service">Ceno Browser Service</string>
    <string name="ceno_notification_title">Sharing cached tabs</string>
    <string name="ceno_notification_description">Tap for more details</string>
    <string name="ceno_notification_home_description">Home</string>
    <string name="clean_insights_header">Help make Ceno better!</string>
    <string name="metrics_consent_dialog_description">We\'re launching a privacy respecting metrics system to help us better understand Ceno users\' needs. You can review the details of what we\'ll collect and how we handle your data in our Privacy Policy. You can also opt out at any time via Settings > Background metrics.</string>
    <string name="consent_dialog_modify_privacy_settings">Modify Privacy Settings</string>
    <string name="bookmark_name_label">Name</string>
    <string name="bookmark_url_label">URL</string>
    <string name="bookmark_folder_label">FOLDER</string>
</resources>