<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".bookmarks.edit.EditBookmarkFragment">

    <TextView
        android:id="@+id/bookmark_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/bookmarkNameEdit"
        android:text="@string/bookmark_name_label"
        android:textAllCaps="true"
        android:textColor="?attr/textPrimary"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/bookmarkNameEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="8dp"
        android:ellipsize="none"
        android:fadingEdgeLength="8dp"
        android:inputType="textAutoComplete"
        android:requiresFadingEdge="horizontal"
        android:textColor="?attr/textSecondary"
        android:textSize="15sp"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/bookmarkUrlLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/bookmarkUrlEdit"
        android:text="@string/bookmark_url_label"
        android:textAllCaps="true"
        android:textColor="?attr/textPrimary"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutBookmarkUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/bookmarkUrlEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="bookmark_url_label"
            android:drawablePadding="8dp"
            android:ellipsize="none"
            android:fadingEdgeLength="8dp"
            android:inputType="textUri"
            android:requiresFadingEdge="horizontal"
            android:textColor="?attr/textSecondary"
            android:textSize="15sp"
            tools:text="https://www.mozilla.org/en-US/" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bookmark_folder_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/bookmarkParentFolderSelector"
        android:text="@string/bookmark_folder_label"
        android:textAllCaps="true"
        android:textColor="?attr/textPrimary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/bookmarkParentFolderSelector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="?attr/textSecondary"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_folder_icon"
        app:drawableTint="?attr/textPrimary"
        tools:text="Mobile Bookmarks" />
</LinearLayout>